Looking for method of chunking data into packets

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,8 @@
       "name": "(Windows) Launch",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "L1IFtap.exe",
-      "args": ["3"],
-      //"args": [""],
+      "program": "rfe2udp.exe",
+      "args": ["300"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
