--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppvsdbg",
       "request": "launch",
       "program": "rfe2udp.exe",
-      "args": ["1"],
+      "args": ["1","-l"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
